--- a/style.css
+++ b/style.css
@@ -35,3 +35,15 @@ footer {
     width: 100%;
     height: 100px;
 }
+
+.header-image {
+    width: 100%;
+    height: 50px;
+    background-color: brown;
+}
+
+.navbar {
+    width: 100%;
+    height: 50px;
+    background-color: bisque;
+}
