--- a/style.css
+++ b/style.css
@@ -13,19 +13,27 @@ header {
 .container {
     background-color: blue;
     height: 400px;
+    width: 60%;
+    margin: auto;
 }
 
 aside {
     float: left;
-    width: 20%;
+    width: 30%;
     height: 300px;
     background-color: red;
     position: relative;
 }
 
+.container::after {
+ content: "";
+ display: table;
+ clear: both;
+}
+
 .content {
     float: left;
-    width: 60%;
+    width: 40%;
     background-color: pink;
     height: 300px;
 }
@@ -55,7 +63,11 @@ footer {
 
 li.nav {
     display: inline-block;
+}
+
+li {
     padding: 10px;
+    list-style-type: none;
 }
 
 ul.menu {
@@ -98,4 +110,16 @@ ul.menu {
 
 .fa-rss-square {
     position: absolute;
+}
+
+li {
+    padding: 10px;
+}
+
+a {
+    color: green;
+}
+
+article {
+    padding: 10px;
 }
