--- a/style.css
+++ b/style.css
@@ -6,23 +6,22 @@
 
 header {
     width: 60%;
-    background-color: yellow;
     margin: auto;
+    margin-top: 10px;
 }
 
 .container {
-    background-color: blue;
-    height: 400px;
     width: 60%;
     margin: auto;
+    margin-bottom: 30px;
+    margin-top: 20px;
 }
 
 aside {
     float: left;
     width: 30%;
-    height: 300px;
-    background-color: red;
     position: relative;
+    padding: 15px;
 }
 
 .container::after {
@@ -34,14 +33,17 @@ aside {
 .content {
     float: left;
     width: 40%;
-    background-color: pink;
     height: 300px;
+    margin-top: 15px;
 }
 
 footer {
-    background-color: green;
-    width: 100%;
-    height: 100px;
+    background-color: white;
+    width: 60%;
+    margin: auto;
+    text-align: center;
+    font-style: italic;
+    border-radius: 10px;
 }
 
 .header-image {
@@ -51,6 +53,7 @@ footer {
     background-size: cover;
     background-position: center;
     position: relative;
+    font-family: sans-serif;
 }
 
 .navbar {
@@ -86,26 +89,39 @@ ul.menu {
 
 .logo {
     position: absolute;
-    top: 50%;
+    top: 31%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    font-size: 3em;
+    color: white;
 }
 
-.site-title {
+#site-title {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    border: 5px solid white;
+    padding: 16px;
+    color: white;
+}
+
+#description {
+    color: white;
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .fa-mountain {
 
 }
 
-.rss {
-
+#rss {
+    width: 40px;
 }
 
 .fa-rss-square {
@@ -120,6 +136,33 @@ a {
     color: green;
 }
 
-article {
+article, .content {
+    padding: 15px;
+}
+
+h3, article{
+    margin-bottom: 10px;
+}
+
+.article h3{
+    display: inline-block;
+}
+
+body {
+    background-image: url("https://organicthemes.com/demo/natural-lite/wp-content/themes/natural-lite/images/default-pattern.png");
+}
+
+article, .content, .article {
+    background-color: white;
+    border-radius: 10px;
+}
+
+footer h4 {
     padding: 10px;
+    color: darkgrey;
+}
+
+img.social {
+    height: 50px;
+    margin: 20px 40px 20px 40px;
 }
